<resources>
    <string name="app_name">Gasto de viagem</string>
    <string name="total_spend">Seu gasto total será de:</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="price">Preço</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="distance">Distância</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_per_liter">KMs por litro</string>
    <string name="price_total">R$ 0</string>
    <string name="calculate">Calcular</string>
</resources>