<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="numberDecimal"
        android:hint="@string/distance"
        android:textSize="16sp"
        android:autofillHints="no" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total_km"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/price"
        android:textSize="16sp"
        android:autofillHints="price"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/price_per_liter"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="numberDecimal"
        android:hint="@string/autonomy"
        android:textSize="16sp"
        android:autofillHints="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/km_per_liter"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/total_spend"
        android:textAllCaps="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_total"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"/>

</LinearLayout>